--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -13,7 +13,8 @@ html {
 /*components*/
 .welcome-container {
   border-radius: 3rem;
-  box-shadow: 0 0 15px rgba(128, 128, 128, 0.1);
+  box-shadow: 0 0 15px rgba(93, 59, 120, 0.1);
+  padding: 3rem 0;
 }
 
 .text-title {
@@ -21,8 +22,13 @@ html {
   font-size: 3rem;
 }
 
-.btn-large {
-  width: 10rem;
+.btn-welcome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25rem;
+  height: 4rem;
+  font-size: 1.5rem;
 }
 
 /*pages*/
