--- a/src/assets/css/pages/Welcome/_welcome.scss
+++ b/src/assets/css/pages/Welcome/_welcome.scss
@@ -1,5 +1,5 @@
 .welcome-container__image {
-     background-color: blue;
+     // background-color: blue;
      width: 30rem;
      height: 30rem;
      display: block;
