--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -6,6 +6,7 @@
 
 /*pages*/
 @import './pages/Welcome/welcome';
+@import './pages/Welcome/login';
 /*variables*/
 
 @import './variables/variables';
