--- a/src/assets/css/variables/_variables.scss
+++ b/src/assets/css/variables/_variables.scss
@@ -5,4 +5,6 @@ $failedColor: #F93154;
 $warningColor: #FFA900;
 $blockHoverColor: #F5F3F6;
 $hoverPurpleColor: #a166d1;
+$normalTextSize: 2rem;
+$smallTextSize: 1.3rem;
 
