--- a/src/assets/css/components/_general.scss
+++ b/src/assets/css/components/_general.scss
@@ -8,7 +8,15 @@
 
 .text-title {
      font-weight: bold;
-     font-size: 3rem;
+     font-size: 2.8rem;
+     user-select: none;
+     cursor: default;
+}
+
+.text-message-danger {
+     color: red;
+     font-size: 1.5rem;
+     text-shadow: 0 0 1px red;
 }
 
 .btn-welcome {
