--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -24,7 +24,15 @@ a {
 
 .text-title {
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 2.8rem;
+  user-select: none;
+  cursor: default;
+}
+
+.text-message-danger {
+  color: red;
+  font-size: 1.5rem;
+  text-shadow: 0 0 1px red;
 }
 
 .btn-welcome {
@@ -92,18 +100,18 @@ a {
 }
 .input-container__input:focus + .input-container__label {
   top: -2rem;
-  color: #5D3B78;
+  color: #FF6F91;
   font-size: 1.3rem;
   font-weight: bold;
 }
 .input-container__input:not(:placeholder-shown).input-container__input:not(:focus) + .input-container__label {
   top: -2rem;
-  color: #5D3B78;
+  color: #FF6F91;
   font-size: 1.3rem;
   font-weight: bold;
 }
 .input-container__input:focus {
-  box-shadow: -3px 3px 3px #a166d1;
+  border-bottom: 3px solid #D65DB1;
 }
 .input-container__label {
   position: absolute;
