--- a/src/assets/css/variables/_variables.scss
+++ b/src/assets/css/variables/_variables.scss
@@ -5,6 +5,8 @@ $failedColor: #F93154;
 $warningColor: #FFA900;
 $blockHoverColor: #F5F3F6;
 $hoverPurpleColor: #a166d1;
+$focusLightPinkColor: #FF6F91;
+$focusBoldPinkColor: #D65DB1;
 $normalTextSize: 2rem;
 $smallTextSize: 1.3rem;
 
