--- a/src/assets/css/components/_general.scss
+++ b/src/assets/css/components/_general.scss
@@ -26,5 +26,10 @@
      width: 25rem;
      height: 4rem;
      font-size: 1.5rem;
+     position: relative;
+     &__icon {
+          position: absolute;
+          left: 15%;
+     }
 }
 
