--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -3,6 +3,8 @@
 /*components*/
 @import './components/general';
 @import './components/header';
+@import './components/completedStep';
+
 
 /*pages*/
 @import './pages/Welcome/welcome';
