--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -4,11 +4,11 @@
 @import './components/general';
 @import './components/header';
 @import './components/completedStep';
+@import './components//input';
 
 
 /*pages*/
 @import './pages/Welcome/welcome';
-@import './pages/Welcome/login';
 /*variables*/
 
 @import './variables/variables';
