--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -43,6 +43,29 @@ a {
   left: 15%;
 }
 
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+.loading__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #FBFBFB;
+  opacity: 0.4;
+}
+.loading__spinner {
+  font-size: 1rem;
+  text-shadow: 0 0 5px black;
+  position: absolute;
+  top: 50%;
+  left: calc(52% - 8rem);
+}
+
 .bg {
   background-color: #5D3B78;
   color: #FBFBFB;
