--- a/src/assets/css/components/_general.scss
+++ b/src/assets/css/components/_general.scss
@@ -8,6 +8,10 @@
      cursor: default;
 }
 
+.text-small {
+     font-size: 1.5rem;
+}
+
 .text-message-danger {
      color: red;
      font-size: 1.5rem;
