--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -23,6 +23,10 @@ a {
   cursor: default;
 }
 
+.text-small {
+  font-size: 1.5rem;
+}
+
 .text-message-danger {
   color: red;
   font-size: 1.5rem;
