--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -8,7 +8,8 @@
 
 
 /*pages*/
-@import './pages/Welcome/welcome';
+@import './pages/welcome';
+@import './pages/home';
 /*variables*/
 
 @import './variables/variables';
