--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -1,10 +1,32 @@
 .home {
-     display: flex;
-     flex-direction: row;
-  
-     &__inbox-list {
-          overflow: scroll;
-          height: calc(100vh - 100px);
-     }
-  
+    display: flex;
+    flex-direction: row;
+
+    &__inbox-list {
+        overflow: scroll;
+        height: 99vh;
+    }
 }
+
+.inbox {
+     background-color: $mainLightColor;
+     transition: 0.2s;
+     cursor: pointer;
+
+     &:hover {
+          background-color: $hoverPurpleColor;
+          color: white;
+     }
+    &__img {
+        border-radius: 100%;
+        overflow: hidden;
+        width: 60px;
+        height: 60px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
