--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -61,7 +61,6 @@
     &__img--0 {
         left: 4rem;
         z-index: 3;
-        
     }
 
     &__overlay {
@@ -76,5 +75,41 @@
         left: 4rem;
         z-index: 5;
         font-size: 1rem;
+    }
+}
+
+.single-chat-box {
+    display: flex;
+
+    &--other {
+        flex-direction: row-reverse;
+    }
+
+    &__img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: thin solid gray;
+    }
+
+    &__message {
+        background-image: linear-gradient(
+            to right top,
+            #fbfbfb,
+            #fafafa,
+            #f8f8f9,
+            #f7f7f8,
+            #f6f5f7,
+            #f2ebf6,
+            #f1e1f3,
+            #f1d6ee,
+            #f4bee1,
+            #f9a5cd,
+            #fe8bb2,
+            #ff6f91
+        );
+        border: thin solid $mainPurpleColor;
+        border-radius: 10px;
+        padding: 1.5rem 1rem;
     }
 }
