--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -113,3 +113,40 @@
         padding: 1.5rem 1rem;
     }
 }
+
+.header-box-chat {
+    background-color: $mainLightColor;
+    padding: 2rem 1.5rem;
+
+    &__img {     
+        padding: 0;
+        box-shadow: 0 0 1px $mainPurpleColor;
+        overflow: hidden;
+        border-radius: 100%;
+        height: 60px;
+        width: 60px;    
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__icon {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        i {
+            padding: 1rem 1.5rem;
+            margin: 0 0.25rem;
+            transition: 0.2s;
+            cursor: pointer;
+            border-radius: 7.5px;
+            &:hover {
+                color: $mainLightColor;
+                background-color: rgba($color: $hoverPurpleColor, $alpha: 0.7);
+            }
+        }
+    }
+}
