--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -273,6 +273,39 @@ a {
   padding: 1.5rem 1rem;
 }
 
+.header-box-chat {
+  background-color: #FBFBFB;
+  padding: 2rem 1.5rem;
+}
+.header-box-chat__img {
+  padding: 0;
+  box-shadow: 0 0 1px #5D3B78;
+  overflow: hidden;
+  border-radius: 100%;
+  height: 60px;
+  width: 60px;
+}
+.header-box-chat__img img {
+  width: 100%;
+  height: 100%;
+}
+.header-box-chat__icon {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.header-box-chat__icon i {
+  padding: 1rem 1.5rem;
+  margin: 0 0.25rem;
+  transition: 0.2s;
+  cursor: pointer;
+  border-radius: 7.5px;
+}
+.header-box-chat__icon i:hover {
+  color: #FBFBFB;
+  background-color: rgba(161, 102, 209, 0.7);
+}
+
 /*variables*/
 
 /*# sourceMappingURL=styles.css.map */
