--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -4,7 +4,8 @@
 
     &__inbox-list {
         overflow: scroll;
-        height: 99vh;
+        overflow-x: hidden;
+        height: 90vh;
         width: 38rem;
     }
 }
@@ -85,7 +86,7 @@
 .single-chat-box-container {
     overflow: scroll;
     overflow-x: hidden;
-    height: 77vh;
+    height: 75vh;
 }
 
 .single-chat-box {
@@ -120,21 +121,22 @@
         border: thin solid $mainPurpleColor;
         border-radius: 10px;
         padding: 1.5rem 1rem;
-        max-width: 60.5rem;
+        max-width: 50rem;
     }
 }
 
 .header-box-chat {
     padding: 2rem 1.5rem;
     background-color: $mainLightColor;
+    height: 13vh;
 
-    &__img {     
+    &__img {
         padding: 0;
         box-shadow: 0 0 1px $mainPurpleColor;
         overflow: hidden;
         border-radius: 100%;
         height: 60px;
-        width: 60px;    
+        width: 60px;
 
         img {
             width: 100%;
