--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -1,3 +1,4 @@
+@import '../variables/variables';
 * {
     margin: 0;
     padding: 0;
@@ -14,5 +15,25 @@ html {
 a {
     text-decoration: none;
     font-weight: normal;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+     background-color: white;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: $mainPurpleColor;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: $hoverPurpleColor;
 }
 
