--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -4,7 +4,8 @@
 @import './components/general';
 @import './components/header';
 @import './components/completedStep';
-@import './components//input';
+@import './components/input';
+@import './components/carousel';
 
 
 /*pages*/
