--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -5,8 +5,19 @@
     &__inbox-list {
         overflow: scroll;
         overflow-x: hidden;
-        height: 90vh;
+        height: 88vh;
         width: 38rem;
+
+        &__older-inboxs {
+            color: $mainPurpleColor;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.2s;
+            user-select: none;
+            &:hover {
+                color: $hoverPurpleColor;
+            }
+        }
     }
 }
 
@@ -87,7 +98,7 @@
     overflow: scroll;
     overflow-x: hidden;
     height: 75vh;
-    width: calc(100% + 7.5px)
+    width: calc(100% + 7.5px);
 }
 
 .single-chat-box {
@@ -100,7 +111,6 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        border: thin solid gray;
     }
 
     &__message {
