--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -232,8 +232,18 @@ a {
 .home__inbox-list {
   overflow: scroll;
   overflow-x: hidden;
-  height: 90vh;
+  height: 88vh;
   width: 38rem;
+}
+.home__inbox-list__older-inboxs {
+  color: #5D3B78;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.2s;
+  user-select: none;
+}
+.home__inbox-list__older-inboxs:hover {
+  color: #a166d1;
 }
 
 .inbox {
@@ -321,7 +331,6 @@ a {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  border: thin solid gray;
 }
 .single-chat-box__message {
   background-image: linear-gradient(to right top, #fbfbfb, #fafafa, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6, #f1e1f3, #f1d6ee, #f4bee1, #f9a5cd, #fe8bb2, #ff6f91);
