--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -11,6 +11,7 @@
 /*pages*/
 @import './pages/welcome';
 @import './pages/home';
+@import './pages/_sendMessage';
 /*variables*/
 
 @import './variables/variables';
