--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,7 +8,6 @@
 html {
   font-size: 62.5%;
   line-height: 1;
-  max-height: 100vh;
   overflow: hidden;
 }
 
@@ -268,7 +267,6 @@ a {
   background-color: #FBFBFB;
   transition: 0.2s;
   cursor: pointer;
-  width: 38rem;
 }
 .inbox:hover {
   background-color: #a166d1;
@@ -333,10 +331,15 @@ a {
   font-size: 1rem;
 }
 
+.box-chat-container {
+  height: 30vh;
+  background-color: red;
+}
+
 .single-chat-box-container {
   overflow: scroll;
   overflow-x: hidden;
-  height: 70vh;
+  height: 100%;
   width: calc(100% + 7.5px);
 }
 
@@ -360,26 +363,32 @@ a {
 }
 
 .header-box-chat {
-  padding: 2rem 1.5rem;
+  display: flex;
+  padding: 2rem 0;
+  margin: 0 -15px;
   background-color: #FBFBFB;
-  height: 13vh;
 }
 .header-box-chat__img {
-  padding: 0;
+  margin: 0 2rem;
   box-shadow: 0 0 1px #5D3B78;
   overflow: hidden;
   border-radius: 100%;
-  height: 60px;
   width: 60px;
+  height: 60px;
 }
 .header-box-chat__img img {
   width: 100%;
   height: 100%;
 }
+.header-box-chat__title {
+  flex-grow: 6;
+}
 .header-box-chat__icon {
+  flex-grow: 1;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-right: 1rem;
 }
 .header-box-chat__icon i {
   padding: 1rem 1.5rem;
@@ -397,7 +406,6 @@ a {
   position: relative;
 }
 .send-message-container__ta {
-  max-height: 7vh;
   resize: none;
   outline: none;
   padding: 1rem 2rem;
