--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -134,12 +134,20 @@ a {
 .header {
   color: aliceblue;
   border-radius: 100px;
+  min-height: 40px;
 }
 
 .header__active {
   color: aliceblue;
   height: 100%;
   background-color: #a166d1;
+  min-height: 40px;
+}
+
+.navbar {
+  padding: 0;
+  height: 10vh;
+  min-height: 70px;
 }
 
 .completed-step {
