--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -34,6 +34,24 @@
     height: 10vh;
     min-height: 70px;
 }
+.dropdown 
+{
+    // background:white ;
+    position: relative;
+   
+    right: 30px;
+//    margin-right: 1000px !important; 
+    .dropdown-menu{
+        // display:flex ;
+        // justify-content: flex-end;
+        // align-items: flex-end;
+        flex-direction: column;
+        position: absolute;
+        // width: 200px;
+        // left: 10px;
+        right: 0;
+    }
+}
 
 
  
