--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -150,6 +150,16 @@ a {
   min-height: 70px;
 }
 
+.dropdown {
+  position: relative;
+  right: 30px;
+}
+.dropdown .dropdown-menu {
+  flex-direction: column;
+  position: absolute;
+  right: 0;
+}
+
 .completed-step {
   display: block;
   height: 0.5rem;
