--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -399,7 +399,7 @@ a {
   border-radius: 50%;
 }
 .single-chat-box__message {
-  background-image: linear-gradient(to right top, #5D3B78, #fbfbfb, #fafafa, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6, #f1e1f3, #f1d6ee, #5D3B78);
+  background-image: linear-gradient(to left top, #5D3B78, #5462e0, #5627d8, #f8f8f9, #f7f7f8, #f6f5f7, #f2ebf6, #f1e1f3, #5462e0, #5D3B78);
   border: thin solid #5D3B78;
   border-radius: 10px;
   padding: 1.5rem 1rem;
