--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -42,6 +42,12 @@
             height: 100%;
         }
     }
+
+    &__new-message {
+        font-weight: bold;
+        color: black;
+        opacity: 1 !important;
+    }
 }
 
 .inbox--active {
