--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -4,7 +4,6 @@
     &__inbox-list {
         min-width: 38rem;
         max-width: 38rem;
-        // width: 38rem;
         overflow: scroll;
         overflow-x: hidden;
         height: 90vh;
@@ -103,9 +102,9 @@
 
 .box-chat-container {
     height: 90vh;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    width: 72.5rem;
 }
 
 .header-box-chat {
@@ -114,6 +113,7 @@
     background-color: $mainLightColor;
 
     &__img {
+        
         margin: 0 2rem;
         box-shadow: 0 0 1px $mainPurpleColor;
         overflow: hidden;
@@ -172,6 +172,12 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &__message {
